--- a/jamb2019.html
+++ b/jamb2019.html
@@ -44,7 +44,7 @@
 
 
     
-    <button id="goback">⬅</button>
+    <a href="index.html" id="goback">⬅</a>
  
     <script src="script/question2019.js"></script>
     <script src="script/script.js"></script>
