--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="https://scontent-los2-1.xx.fbcdn.net/v/t39.30808-6/236870363_109906451401498_4620408936663517254_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeF-MPBMXlZ7baI4qB_ERegZqFjzPbLeQEeoWPM9st5AR-h7H9uHr05cAPrNJlNnziaLVYL6otRb8Hu-IaoL4AK5&_nc_ohc=L8PznbRpZSYQ7kNvgGKjoUk&_nc_oc=AdlNYJVXxagQtKZmZey8Yl502b717JKENld0aw7EhKPaRQgkdqyQtWwp6ZwPG7hgf88&_nc_zt=23&_nc_ht=scontent-los2-1.xx&_nc_gid=iLbuRuIANuuMLy2pXTHVlw&oh=00_AYFt3M-CQquRwBnQWnTRGf5Bbf8F53N3iL4teTvuoMno0A&oe=67ED21C2" alt="Quiz Icon" class="quiz-image">
         <div class="welcome-note">
             <h1>Welcome chy 😁</h1>
-            <p>Achalugo, you are not going to be my sister any more if you don't 300 oo 😂. Select your exam year to begin! </p>
+            <p>Achalugo, you are not going to be my sister any more if you don't score 300 and above oo 😂. Select your exam year to begin! </p>
             <!-- <p>Your hard work and dedication have prepared you for this momemt. Go and crush it🥇. Select your exam year to begin!</p> -->
         </div>
 
